tests/invalid/RealDiv_Invalid_1.whiley
import * from whiley.lang.*

method main(System.Console sys) => void:
    ls = [1, 2, 3]
    x = 2.0 / 1
    sys.out.println(Any.toString(ls)[x])
